fix(tabs): add scroll overflow

--- a/packages/components/src/components/bal-tabs/bal-tabs.sass
+++ b/packages/components/src/components/bal-tabs/bal-tabs.sass
@@ -44,6 +44,7 @@
     font-size: $size-normal
     justify-content: space-between
     white-space: nowrap
+    overflow-x: auto
     ul
       align-items: center
       display: flex
